--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Reproducible Research Peer Assignment 1"
 author: "Li Xu"
-output: html_document
+output:
+  html_document:
+    keep_md: true
 ---
 
 ##Loading and preprocessing the data
@@ -40,12 +42,13 @@ TotalStepsPerDay<-tapply(DataWithoutNA$steps,DataWithoutNA$date,sum,na.rm=T)
 ```
 The histogram of the total number of steps taken per day is as follows: (Task 2)
 
-```{r echo=FALSE}
+```{r echo=TRUE}
 Data<-read.csv("activity.csv",sep=",",header=T)
 Data$date<-as.Date(Data$date,"%Y-%m-%d")
 DataWithoutNA<-na.omit(Data)
 TotalStepsPerDay<-tapply(DataWithoutNA$steps,DataWithoutNA$date,sum,na.rm=T)
-hist(TotalStepsPerDay,main="Total Number of Steps Taken Per Day",xlab="total number of steps",ylab="frequency")
+hist(TotalStepsPerDay,main="Total Number of Steps Taken Per Day",
+     xlab="total number of steps",ylab="frequency")
 ```
 
 We then calculate the mean and median of the total number of steps per day by 
@@ -78,12 +81,13 @@ The means of the total number of steps taken per day are as follows:
 
 We can draw the histogram
 
-```{r echo=FALSE}
+```{r echo=TRUE}
 Data<-read.csv("activity.csv",sep=",",header=T)
 Data$date<-as.Date(Data$date,"%Y-%m-%d")
 DataWithoutNA<-na.omit(Data)
 MeanOfTotalStepsPerDay<-tapply(DataWithoutNA$steps,DataWithoutNA$date,mean,na.rm=T)
-hist(MeanOfTotalStepsPerDay,main="Mean of Total Number of Steps Taken Per Day",xlab="mean of total number of steps",ylab="frequency")
+hist(MeanOfTotalStepsPerDay,main="Mean of Total Number of Steps Taken Per Day",
+     xlab="mean of total number of steps",ylab="frequency")
 ```
 
 And all medians of the total number of steps taken per day is 0 (Task 3).
@@ -97,12 +101,14 @@ MeanofTotalStepsPerInterval<-tapply(DataWithoutNA$steps,DataWithoutNA$interval,m
 ```
 Then we make the time series plot of the 5-minute interval and the average number of steps taken, averaged across all days as follows: (Task 1)
 
-```{r echo=FALSE}
+```{r echo=TRUE}
 Data<-read.csv("activity.csv",sep=",",header=T)
 Data$date<-as.Date(Data$date,"%Y-%m-%d")
 DataWithoutNA<-na.omit(Data)
 MeanOfTotalStepsPerInterval<-tapply(DataWithoutNA$steps,DataWithoutNA$interval,mean,na.rm=T)
-plot(unique(Data$interval),MeanOfTotalStepsPerInterval,type="l",main="Average of Total Number of Steps Taken Per Time Interval",xlab="average of total number of steps",ylab="frequency")
+plot(unique(Data$interval),MeanOfTotalStepsPerInterval,type="l",
+     xlab="average of total number of steps",ylab="frequency",
+     main="Average of Total Number of Steps Taken Per Time Interval")
 ```
 
 By typing
@@ -132,7 +138,7 @@ for(index in 1:nrow(NewData)){
 
 The histogram of the total number of steps taken each day in the new data set is as follows:
 
-```{r echo=FALSE}
+```{r echo=TRUE}
 Data<-read.csv("activity.csv",sep=",",header=T)
 Data$date<-as.Date(Data$date,"%Y-%m-%d")
 DataWithoutNA<-na.omit(Data)
@@ -145,7 +151,8 @@ for(index in 1:nrow(NewData)){
   }
 }
 TotalStepsPerDay<-tapply(NewData$steps,NewData$date,sum,na.rm=T)
-hist(TotalStepsPerDay,main="Total Number of Steps Taken Per Day in the new data set",xlab="total number of steps",ylab="frequency")
+hist(TotalStepsPerDay,main="Total Number of Steps Taken Per Day in the new data set",
+     xlab="total number of steps",ylab="frequency")
 ```
 
 We then calculate the mean and median of the total number of steps per day in the new data set by 
@@ -226,8 +233,8 @@ MeanWeekday<-tapply(NewDataWeekday$steps,NewDataWeekday$interval,mean,na.rm=T)
 MeanWeekend<-tapply(NewDataWeekend$steps,NewDataWeekend$interval,mean,na.rm=T)
 Mean<-c(MeanWeekend,MeanWeekday)
 Interval<-c(unique(Data$interval),unique(Data$interval))
-Day<-c(c(rep("weekend",length(unique(Data$interval)))),c(rep("weekday",
-    length(unique(Data$interval)))))
+Day<-c(c(rep("weekend",length(unique(Data$interval)))), 
+    c(rep("weekday",length(unique(Data$interval)))))
 FinalPlotData<-data.frame("MeanCol"=Mean,"IntervalCol"=Interval,"DayCol"=Day)
 xyplot(MeanCol~IntervalCol|DayCol,data=FinalPlotData,layout=c(1,2),type="l",
     ylab="Number of steps",xlab="Interval")
@@ -235,7 +242,7 @@ xyplot(MeanCol~IntervalCol|DayCol,data=FinalPlotData,layout=c(1,2),type="l",
 
 The plot is as follows (Task 2):
 
-```{r echo=FALSE}
+```{r echo=TRUE}
 library(lattice)
 Data<-read.csv("activity.csv",sep=",",header=T)
 Data$date<-as.Date(Data$date,"%Y-%m-%d")
@@ -260,9 +267,11 @@ MeanWeekday<-tapply(NewDataWeekday$steps,NewDataWeekday$interval,mean,na.rm=T)
 MeanWeekend<-tapply(NewDataWeekend$steps,NewDataWeekend$interval,mean,na.rm=T)
 Mean<-c(MeanWeekend,MeanWeekday)
 Interval<-c(unique(Data$interval),unique(Data$interval))
-Day<-c(c(rep("weekend",length(unique(Data$interval)))),c(rep("weekday",length(unique(Data$interval)))))
+Day<-c(c(rep("weekend",length(unique(Data$interval)))),
+    c(rep("weekday",length(unique(Data$interval)))))
 FinalPlotData<-data.frame("MeanCol"=Mean,"IntervalCol"=Interval,"DayCol"=Day)
-xyplot(MeanCol~IntervalCol|DayCol,data=FinalPlotData,layout=c(1,2),type="l",ylab="Number of steps",xlab="Interval")
+xyplot(MeanCol~IntervalCol|DayCol,data=FinalPlotData,layout=c(1,2),type="l",
+    ylab="Number of steps",xlab="Interval")
 ```
 
 
